--- a/java-advanced-day2/legacy-refactoring/pom.xml
+++ b/java-advanced-day2/legacy-refactoring/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.com.bottega</groupId>
-    <artifactId>java-advanced</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.bottega</groupId>
+    <artifactId>legacy-refactoring</artifactId>
     <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>java-advanced-day1</module>
-        <module>java-advanced-day2</module>
-        <!--<module>java-advanced-day3</module>-->
+        <module>production-api</module>
+        <module>production-impl</module>
+        <module>production-persistence</module>
     </modules>
 
 </project>
